--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [project]
 name = "xdsl-asv"
 version = "0.1.0"
-description = "Add your description here"
+description = "ASV benchmarks for xDSL"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "asv>=0.6.4",
     "versioneer>=0.29",
 ]
-
