--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -13,6 +13,9 @@ jobs:
         with:
           submodules: 'true'
       - uses: astral-sh/setup-uv@v3
+      - name: Set up Python 3.12
+        run: uv python install 3.12
+
 
       - name: Run the ASV benchmarks
         run: |
