--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -21,7 +21,5 @@ jobs:
         run: |
           make .venv
           make xdsl/.venv
-          make asv-machine
-          ls -alFh
-          ls -alFh xdsl/
-          make asv
+          .venv/bin/asv machine --yes
+          .venv/bin/asv --config asv.conf.json run --python=same || true
