--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 site/
 
 .asv
-# !.asv/results/github-action/
-# !.asv/results/benchmarks.json
+!.asv/results/github-action/
+!.asv/results/benchmarks.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
