--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Run the ASV benchmarks
         run: make asv
       - name: Generate the ASV website
-        run: make site
+        run: make html
 
       - name: Commit the generated benchmark results
         uses: stefanzweifel/git-auto-commit-action@v5
@@ -49,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: site/
+          path: .asv/html/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
