--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -27,13 +27,13 @@ jobs:
         with:
             enable-cache: true
             cache-dependency-glob: "uv.lock"
-      - name: Set up Python 3.12
-        run: uv python install 3.12
+      - name: Set up Python 3.10
+        run: uv python install 3.10
       - name: Install the project
         run: make install
 
       - name: Fingerprint the machine
-        run: uv run asv machine --machine github-action --yes
+        run: uv run asv machine --yes # --machine github-action
       - name: Run the ASV benchmarks
         run: make asv
       - name: Generate the ASV website
