--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,12 @@ name = "xdsl-asv"
 version = "0.1.0"
 description = "ASV benchmarks for xDSL"
 readme = "README.md"
-requires-python = ">=3.12.0, <3.13"
+requires-python = ">=3.10.0"
 dependencies = [
     "asv>=0.6.4",
     "versioneer>=0.29",
 ]
+
+[build-system]
+requires = ["setuptools>=42", "wheel", "versioneer[toml]"]
+build-backend = "setuptools.build_meta"
