--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 site/
 
 .asv/html
-.asv/results/**/
-!.asv/results/github-action/
-!.asv/results/benchmarks.json
+# .asv/results/**/
+# !.asv/results/github-action/
+# !.asv/results/benchmarks.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
