--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -13,7 +13,7 @@ jobs:
   asv:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pages: write
       id-token: write
     environment:
