--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Commit the generated benchmark results
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Add CI benchmarks runs for ${{ env.sha_short }}"
+          commit_message: "Add CI benchmark runs"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
