Add cron schedule and run on main commit only

--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -2,8 +2,8 @@ name: asv
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: 0 4 * * *
+  schedule:
+    - cron: 0 4 * * *
 
 concurrency:
   group: "pages"
@@ -41,7 +41,7 @@ jobs:
             --num_cpu `nproc --all` \
             --ram `grep MemTotal /proc/meminfo | awk '{print $2}'`
       - name: Run the ASV benchmarks
-        run: uv run asv run main~1..main
+        run: uv run asv run main
       - name: Generate the ASV website
         run: uv run asv publish
 
