--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -23,7 +23,12 @@ jobs:
       - uses: actions/checkout@v4
         # with:
         #   submodules: 'true'
-      - run: git submodule update --init && cd xdsl && git pull && git log -15 --pretty=format:"%h"
+      - run: |
+          git config --global url."https://github.com/".insteadOf "git@github.com:" &&\
+              git submodule update --init &&\
+              cd xdsl &&\
+              git pull &&\
+              git log -15 --pretty=format:"%h"
       - uses: astral-sh/setup-uv@v3
         with:
             enable-cache: true
