Include python3.13 in asv benchmarking

--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -42,6 +42,8 @@ jobs:
             cache-dependency-glob: "uv.lock"
       - name: Set up Python 3.12
         run: uv python install 3.12
+      - name: Set up Python 3.13
+        run: uv python install 3.13
       - name: Install the project
         run: VENV_ARGS="--only-group asv" make install
 
