--- a/.github/workflows/asv-dev.yaml
+++ b/.github/workflows/asv-dev.yaml
@@ -30,22 +30,14 @@ jobs:
         with:
             enable-cache: true
             cache-dependency-glob: "uv.lock"
+      # Use `actions/setup-python@v5` rather than `uv python install 3.x` to
+      # ensure that it is correctly in the $PATH for `asv`
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
       - uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-      - name: Set up Python 3.12
-        run: |
-          # uv python install 3.12
-          uv python list
-          python3.12 --version
-      - name: Set up Python 3.13
-        run: |
-          # uv python install 3.13
-          uv python list
-          python3.13 --version
 
       - name: Install the project
         run: VENV_ARGS="--only-group asv" make install
