--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -40,8 +40,14 @@ jobs:
         with:
             enable-cache: true
             cache-dependency-glob: "uv.lock"
-      - name: Set up Python 3.12
-        run: uv python install 3.12
+      # Use `actions/setup-python@v5` rather than `uv python install 3.x` to
+      # ensure that it is correctly in the $PATH for `asv`
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
       - name: Install the project
         run: VENV_ARGS="--only-group asv" make install
 
