--- a/.github/workflows/asv-dev.yaml
+++ b/.github/workflows/asv-dev.yaml
@@ -34,10 +34,13 @@ jobs:
       # ensure that it is correctly in the $PATH for `asv`
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
+          python-version: |
+              3.12
+              3.13
+      - name: Check Python installations
+        run: |
+          which python3.12 && python3.12 --version
+          which python3.13 && python3.12 --version
 
       - name: Install the project
         run: VENV_ARGS="--only-group asv" make install
