--- a/.github/workflows/asv.yaml
+++ b/.github/workflows/asv.yaml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  NUM_BENCHMARK_COMMITS: 10
+  NUM_BENCHMARK_COMMITS: 3
 
 jobs:
   asv:
@@ -44,12 +44,13 @@ jobs:
       # ensure that it is correctly in the $PATH for `asv`
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-      - name: Install the project
-        run: VENV_ARGS="--only-group asv" make install
+          python-version: |
+              3.12
+              3.13
+      - name: Check Python installations
+        run: |
+          which python3.12 && python3.12 --version
+          which python3.13 && python3.12 --version
 
       - name: Fingerprint the machine
         run: |
