--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,14 @@ version = "0.1.0"
 description = "Benchmarks for xDSL"
 readme = "README.md"
 requires-python = ">=3.10.0"
+dependencies = [
+    "versioneer>=0.29",
+    "xdsl @ file:///${PROJECT_ROOT}/xdsl",
+]
 
 [dependency-groups]
 asv = [
     "asv>=0.6.4",
-    "versioneer>=0.29",
 ]
 dev = [
     "mypy>=1.13.0",
@@ -17,7 +20,6 @@ dev = [
 profile = [
     "viztracer>=1.0.0",
     "snakeviz>=2.2.2",
-    "xdsl @ file:///${PROJECT_ROOT}/xdsl",
     "flameprof>=0.4",
 ]
 
@@ -69,22 +71,18 @@ ignore = [
     "E501",   # "Line too long". If black is happy, I'm happy.
     "EM101",  # "Exception must not use a string literal, assign to variable first"
     "EM102",  # "Exception must not use an f-string literal, assign to variable first"
-    # "RET504",   # "Unnecessary variable assignment before `return` statement"
     "S101",   # "Use of `assert` detected"
     "SIM108", # "Use ternary operator ...". Ternary is harmful for readability in some cases.
     "TRY003", # "Avoid specifying long messages outside the exception class"
-    # "D",      # Docstrings related. We want to keep this to replace `pydocstyle`
     "D203", # Disable incompatible docstring rules to avoid warnings
     "D212", #  "
     "ISC001", # May cause conflicts with auto-formatter
-    ### Edmund's preferences
     "T201",   # Allow print statements!
     "ERA001", # Don't remove commented out code
     "TD",     # Allow TODOs in code (controversial, I know...)
     "FBT001", "FBT002", # Get off my back about boolean positional arguments
     "FIX002", # "
     "INP001", # "Add an `__init__.py`". The `test` directory should be a namespace package (https://stackoverflow.com/a/8450858)!
-    # "I",      # Ignore import sorting, as we using `isort` instead, as it has more functionality
 ]
 # Use Google-style docstrings.
 pydocstyle.convention = "google"
